--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --main-color: #2699f7;
+  --main-color: #e7bd8d;
 }
 
 body {
@@ -9,6 +9,7 @@ body {
   font-weight: 700;
   text-shadow: -1px 1px 2px black;
   font-size: 25px;
+  margin: 0;
 }
 
 .clock-output {
@@ -128,13 +129,10 @@ body {
 }
 
 .cls-1 {
-  fill: var(--main-color);
-}
-
-.cls-3 {
-  fill: #311a34;
-}
-
+  fill: #fff;
+  opacity: 0.8;
+  stroke-width: 0px;
+} 
 .centered-text {
   font-family: "Figtree", sans-serif;
   font-weight: 900;
@@ -154,8 +152,8 @@ body {
 .small-text {
   color: var(--main-color);
   font-size: 30px;
-  text-shadow: 0 1px 0 #2699f7, 0 2px 0 #148ff3, 0 3px 0 #0162b3,
-    0 4px 0 #00579e, 0 5px 0 #00437a, 0 6px 1px rgba(0, 0, 0, 0.1),
+  text-shadow: 0 1px 0 #D0AA7F, 0 2px 0 #B99771, 0 3px 0 #A28463,
+    0 4px 0 #8B7155, 0 5px 0 #745F47, 0 6px 1px rgba(0, 0, 0, 0.1),
     0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3),
     0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25),
     0 10px 10px rgba(0, 0, 0, 0.2), 0 20px 20px rgba(0, 0, 0, 0.15);
@@ -205,175 +203,9 @@ body {
   border: 1px solid transparent; /* Added for visual indication of selection */
 }
 
-.container {
-  overflow: hidden;
-  align-items: center;
-  border-radius: 3px;
-  background-color: var(--main-color);
-  height: 40px;
-  width: 190px;
-  padding: 6px;
-  bottom: 73px;
-  left: 43px;
+#image-container {
+  width: 1920px;
+  height: 1080px;
   position: relative;
-  animation: fanslyInHandle 1s ease-in forwards,
-    colorChange 1s 7.5s ease-in forwards;
-}
-
-@keyframes colorChange {
-  0% {
-    background-color: var(--main-color);
-  }
-  100% {
-    background-color: rgb(51, 47, 58);
-    box-shadow: -1px 1px 0px rgb(0, 0, 0), -2px 2px 0px rgba(0, 0, 0),
-      -3px 3px 0px rgba(0, 0, 0), -4px 4px 0px rgba(0, 0, 0);
-  }
-}
-
-@keyframes fanslyInHandle {
-  0% {
-    opacity: 0;
-    transform: scaleX(0);
-    box-shadow: none;
-  }
-  50%,
-  65% {
-    opacity: 1;
-    transform: scaleX(1);
-    box-shadow: none;
-  }
-  100% {
-    opacity: 1;
-    transform: scaleX(1);
-    box-shadow: -1px 1px 0px rgba(6, 86, 151), -2px 2px 0px rgba(6, 86, 151),
-      -3px 3px 0px rgba(6, 86, 151), -4px 4px 0px rgba(6, 86, 151);
-  }
-}
-
-.twitter-handle {
-  font-size: 28px;
-  color: white;
-  font-family: "Patua One", serif;
-  font-weight: 400;
-  font-style: normal;
-  position: absolute;
-  padding-left: 50px;
-  text-shadow: -1px 1px 3px rgba(0, 0, 0, 0.7);
-  opacity: 0; /* Ensure it starts hidden */
-  animation: slideInHandle 700ms ease-in forwards;
-  animation-delay: 4s;
-}
-
-.follow {
-  font-size: 28px;
-  color: white;
-  font-family: "Patua One", serif;
-  font-weight: 400;
-  font-style: normal;
-  padding-left: 10px;
-  word-spacing: 0;
-  position: absolute;
-  filter: blur(15px);
-  text-shadow: -1px 1px 3px rgba(0, 0, 0, 0.7);
-  animation: followReveal 700ms 0.5s ease-in forwards,
-    followRevealOut 700ms 3.5s ease-in forwards;
-}
-
-@keyframes followReveal {
-  0% {
-    transform: scale(0.5);
-    filter: blur(15px);
-  }
-  50% {
-    transform: scale(1.2);
-    filter: blur(0px);
-  }
-  100% {
-    transform: scale(1);
-    filter: blur(0px);
-  }
-}
-
-@keyframes followRevealOut {
-  0% {
-    transform: scale(1);
-    filter: blur(0px);
-  }
-  100% {
-    transform: scale(0);
-    filter: blur(15px);
-  }
-}
-
-@keyframes slideInHandle {
-  0% {
-    opacity: 0;
-    clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
-  }
-  100% {
-    opacity: 1;
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
-  }
-}
-
-#twitter-logo {
-  fill: white;
-  position: absolute;
-  height: 32px;
-  opacity: 0;
-  filter: drop-shadow(-1px 1px 2px rgba(0, 0, 0, 0.5));
-  animation: twitterSlideIn 1s 4s ease-in forwards,
-    twitterSlideOut 1s 8s ease-in forwards;
-}
-
-@keyframes twitterSlideIn {
-  0% {
-    opacity: 0;
-    transform: scale(1.3) translateX(-100%); /* Start off-screen and scaled down */
-  }
-  50%,
-  65% {
-    opacity: 1;
-    transform: scale(1.3) translateX(0); /* Start off-screen and scaled down */
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1) translateX(0); /* Start off-screen and scaled down */
-  }
-}
-
-@keyframes twitterSlideOut {
-  0% {
-    opacity: 1;
-    transform: translateX(0); /* Start off-screen and scaled down */
-  }
-  100% {
-    opacity: 0;
-    transform: translateX(-120%); /* Start off-screen and scaled down */
-  }
-}
-
-#x-logo {
-  fill: white;
-  position: absolute;
-  height: 32px;
-  opacity: 0;
-  animation: xSlideIn 1s 8s ease-in forwards;
-}
-
-@keyframes xSlideIn {
-  0% {
-    opacity: 0;
-    transform: scale(1.3) translateX(-100%); /* Start off-screen and scaled down */
-  }
-  50%,
-  65% {
-    opacity: 1;
-    transform: scale(1.3) translateX(0); /* Start off-screen and scaled down */
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1) translateX(0); /* Start off-screen and scaled down */
-  }
+  overflow: hidden; /* Hide content outside the boundaries */
 }
